# gamesparser

./: Dockerfile  Makefile  README.md  main.py  pyproject.toml  pyrightconfig.json
gamesparser/: __init__.py  models.py  psn.py  xbox.py
src/: constants.py  main.py  models.py  psn.py  xbox.py
tests/: __init__.py  conftest.py  test_parse.py  test_psn.py  test_xbox.py
